Fix blog header link styling, surface series title, align about text
- Blog header h1 no longer uses theme color so it stops reading as a link
- Series card title uses .post-title so it looks like a clickable link
- About-page sentence aligned with the blog description

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -522,7 +522,7 @@ footer.sticky-bottom {
   padding-bottom: 3rem;
 
   h1 {
-    color: var(--global-theme-color);
+    color: var(--global-text-color);
     font-size: 5rem;
   }
 }
